--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/swiper.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="css/font-other.css">
-    <link rel="stylesheet" type="text/css" href="css/slide-unlock.css">
-    <link rel="stylesheet" type="text/css" href="css/econline.css">
+    <link rel="stylesheet" type="text/css" href="css/bl-plug.css">
     <!-- end -->
 
     <!-- private_css -->
@@ -80,74 +79,65 @@
 <body class="resetStyle">
 
 <div class="home-header">
-    <div class="header-nav">
-        <div class="nav-ltd">
-            <div class="nav-container">
-                <div class="panel-l"></div>
-                <div class="panel-r">
-                    <a href="tel:" class="s-phone">+0086 13663282016</a>
-                    <a href="mailto:" class="s-mail">sales@bestchickencage.com</a>
+    <div class="nav-main">
+        <div class="wrap-box clear-float nav-w1200">
+            <div class="main-info">
+                <div class="nav-w1200">
+                    <div class="info-l">
+                        <h1 class="logo-h1">
+                            <a href="/index.html" title="logo" class="logo-a">
+                                <img src="images/wb-home/public/logo.png" alt="logo">
+                            </a>
+                        </h1>
+                        <div class="logo-des">
+                            <p>XINLIFENG-12 years hotel metal customized products manufacturer</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="nav-main">
-            <div class="wrap-box">
-                <h1 class="main-logo">
-                    <a href="/index.html" title="logo" class="logo-a">
-                        <img src="images/wb-home/public/logo.png" alt="logo">
-                    </a>
-                </h1>
-                <div class="main-btn">
-                    <i class="bar-1"></i>
-                    <i class="bar-2"></i>
-                    <i class="bar-3"></i>
-                </div>
-                <nav class="main-nav">
-                    <ul class="nn-menu-f">
-                        <li class="hasdrop active">
-                            <a href="/index.html" title="Home">Home</a>
-                        </li>
-                        <li class="hasdrop">
-                            <a href="#" title="Product">Product</a>
-                            <ul class="nn-menu-s">
-                                <li class="hasdrop">
-                                    <a href="#" title="">second-item</a>
-                                    <ul class="nn-menu-t">
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                    </ul>
-                                </li>
-                                <li class="hasdrop">
-                                    <a href="#" title="">second-item</a>
-                                    <ul class="nn-menu-t">
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="hasdrop">
-                            <a href="#" title="New">New</a>
-                            <ul class="nn-menu-s">
-                                <li class="hasdrop">
-                                    <a href="#" title="">second-item</a>
-                                    <ul class="nn-menu-t">
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                    </ul>
-                                </li>
-                                <li class="hasdrop">
-                                    <a href="#" title="">second-item</a>
-                                    <ul class="nn-menu-t">
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                        <li class="hasdrop"><a href="#" title="">third-item</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="main-btn">
+                <i class="bar-1"></i>
+                <i class="bar-2"></i>
+                <i class="bar-3"></i>
             </div>
+            <nav class="main-nav">
+                <ul class="nn-menu-f">
+                    <li class="hasdrop is-active">
+                        <a href="/index.html" title="Home">Home</a>
+                    </li>
+                    <li class="hasdrop">
+                        <a href="#" title="">Product</a>
+                        <ul class="nn-menu-s">
+                            <li class="hasdrop">
+                                <a href="#" title="">second-item</a>
+                                <ul class="nn-menu-t">
+                                    <li class="hasdrop"><a href="#" title="">third-item</a></li>
+                                    <li class="hasdrop"><a href="#" title="">third-item</a></li>
+                                </ul>
+                            </li>
+                            <li class="hasdrop">
+                                <a href="#" title="">second-item</a>
+                                <ul class="nn-menu-t">
+                                    <li class="hasdrop"><a href="#" title="">third-item</a></li>
+                                    <li class="hasdrop"><a href="#" title="">third-item</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="hasdrop">
+                        <a href="#" title="">Case</a>
+                    </li>
+                    <li class="hasdrop">
+                        <a href="#" title="">About us</a>
+                    </li>
+                    <li class="hasdrop">
+                        <a href="#" title="">News</a>
+                    </li>
+                    <li class="hasdrop">
+                        <a href="#" title="">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
@@ -177,34 +167,37 @@
 </div>
 <div class="home-footer">
     <div class="foo-main">
-        <div class="foo-container">
-            <div class="main-contact">
+        <div class="foo-w1200">
+            <div class="main-mes">
                 <p class="tit">Contact Us</p>
-                <div class="s-place">No. 8, Jinyue Industrial Zone B, Huafu Street,West Industrial Zone, Raoyang , Hengshui , Hebei Province, China</div>
-                <a href="tel:" class="s-phone">+0086 13663282016</a>
-                <a href="mailto:" class="s-mail">sales@bestchickencage.com</a>
+                <div class="item">
+                    <div class="dt">
+                        <img src="images/wb-home/navfoo/foo-mail.png" alt="">
+                    </div>
+                    <div class="dd">
+                        <a href="mailto:" title="">sales@bestchickencage.com</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="dt">
+                        <img src="images/wb-home/navfoo/foo-phone.png" alt="">
+                    </div>
+                    <div class="dd">
+                        <a href="mailto:" title="">+0086 13663282016</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="dt">
+                        <img src="images/wb-home/navfoo/foo-place.png" alt="">
+                    </div>
+                    <div class="dd">
+                        <a href="mailto:" title="">No. 8, Jinyue Industrial Zone B, Huafu Street,West Industrial Zone, Raoyang , Hengshui , Hebei Province, China</a>
+                    </div>
+                </div>
             </div>
             <div class="main-nav">
                 <p class="tit">Quick links</p>
-                <ul>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                </ul>
-            </div>
-            <div class="main-nav">
-                <p class="tit">Quick links</p>
-                <ul>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                    <li><a href="#" title="">link</a></li>
-                </ul>
-            </div>
-            <div class="main-nav">
-                <p class="tit">Quick links</p>
-                <ul>
+                <ul class="nav-list">
                     <li><a href="#" title="">link</a></li>
                     <li><a href="#" title="">link</a></li>
                     <li><a href="#" title="">link</a></li>
@@ -214,12 +207,26 @@
         </div>
     </div>
     <div class="foo-copy">
-        <div class="foo-container">
-            <span class="copy-des">Copyright © 2019 <span>BEST</span>. All Rights Reserved.</span>
-            <span class="copy-des">Technical support：
-                <a href="#" title="Baiila" rel="nofollow" target="_blank">Baiila</a>
-                <a href="#" title="sitemap" rel="nofollow" target="_blank">sitemap</a>
-            </span>
+        <div class="foo-w1200">
+            <div class="copy-l">
+                <span class="copy-des">Copyright © 2019 BEST. All Rights Reserved.</span>
+                <span class="copy-a">Technical support：
+                    <a href="#" title="Baiila" rel="nofollow" target="_blank">Baiila</a>
+                    <a href="#" title="sitemap" rel="nofollow" target="_blank">sitemap</a>
+                </span>
+            </div>
+            <div class="copy-r">
+                <div class="dropdown dropup copy-link">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="link-name">Baiila</span>
+                        <img src="images/wb-home/navfoo/foo-arrow.png" alt="">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" title="" rel="nofollow" target="_blank">link</a></li>
+                        <li><a href="#" title="" rel="nofollow" target="_blank">link</a></li>
+                    </ul>
+                </div>     
+            </div>
         </div>
     </div>
 </div>
@@ -287,9 +294,10 @@
 </div> -->
 
 <!-- slider -->
-<!-- <div id="slider2" style="margin: 10px 0;">
-    <div class="slider_bg" style="width: 0px;"></div>
-    <span class="label" style="left: 0px;">&gt;&gt;</span> <span class="labelTip">Drag slider validation</span>
+<!-- <div id="slider2">
+    <div class="slider_bg"></div>
+    <span class="label">&gt;&gt;</span>
+    <span class="labelTip">Drag slider validation</span>
 </div> -->
 
 <!-- video -->
